--- a/assets/settings.yaml
+++ b/assets/settings.yaml
@@ -19,3 +19,4 @@ cssPath:
 regionalDefinition:
   - region: tr
     devExLocaleCDNAddress: https://cdn3.devexpress.com/jslib/21.2.3/js/localization/dx.messages.tr.js
+singleTab: true
